--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -1,13 +1,14 @@
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
 }
 
 .container {
-  text-align: center;
-  height: 100%;
-  padding: 16px;
-  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
 }
 
 .container div {
@@ -20,17 +21,17 @@ body, html {
 }
 
 .header {
-  background-color: #FFDE22;
-  grid-column: 1 / 3;
+  background-color: #ffde22;
+  grid-column: 1/3;
 }
 
 .sidebar {
-  background-color: #FF7755;
-  grid-row: 2 / 4;
+  background-color: #ff7755;
+  grid-row: 2/4;
 }
 
 .nav {
-  background-color: #00DDFF;
+  background-color: #00ddff;
 }
 
 .article {
@@ -46,5 +47,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1/3;
 }
