--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,6 +7,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-column: 1 / 3;
   gap: 4px;
 }
 
@@ -19,25 +20,28 @@
 }
 
 .header {
-  background-color: #393f4d;
-  grid-column: 1 / 3;
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  color: green;
+  grid-template-columns: 1fr 2fr;
+  background-color: #393f4d;
+  grid-column: 1/3;
 }
 
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
 .menu ul,
 .menu li {
   font-size: 16px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  list-style-type: none;
 }
 
 .sidebar {
+  display: grid;
   background-color: #ff7755;
+  grid-column: 1/2;
   grid-row: 2/4;
-  display:grid;
-  gap:50px;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,6 +50,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .side-content {
@@ -53,27 +59,34 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
   background-color: #ff7755;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.nav ul,
-li {
+
+.nav ul li {
   font-size: 16px;
   text-transform: uppercase;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  list-style-type: none;
 }
 
 .article {
   background-color: #bccbde;
   grid-column: 2/3;
   grid-row: 3/4;
-
-  display:grid;grid-template:repeat(3,1fr)/ repeat(3,1fr);
-  gap:15px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -87,6 +100,7 @@ li {
   background-color: #ffffff;
   color: black;
   text-align: center;
+  height:200px;
 }
 
 .card p {
@@ -102,7 +116,7 @@ li {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1/3;
 }
 
 .footer p {
